--- a/app/src/main/res/layout/activity_item_edit.xml
+++ b/app/src/main/res/layout/activity_item_edit.xml
@@ -6,4 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ItemEditActivity">
 
+    <EditText
+        android:id="@+id/edit_text"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
