--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -14,7 +14,8 @@
         <CheckBox
             android:id="@+id/check_box"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:checked="@{data.done}"/>
 
         <TextView
             android:id="@+id/title_text"
