--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -20,7 +20,7 @@
         <TextView
             android:id="@+id/title_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:textSize="24sp"
             android:text="@{data.title}"/>
 
