--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -21,6 +21,7 @@
             android:id="@+id/title_text"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:gravity="center_vertical"
             android:textSize="24sp"
             android:text="@{data.title}"/>
 
