--- a/app/src/main/res/layout/activity_rank.xml
+++ b/app/src/main/res/layout/activity_rank.xml
@@ -1,37 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/backgraound"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
-        android:id="@+id/compare_text"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/frame_style2"
-        android:gravity="center"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="spread" />
+    <data>
 
-    <TextView
-        android:id="@+id/drag_text"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginBottom="120dp"
-        android:background="@drawable/frame_style"
-        android:gravity="center"
-        android:padding="8dp"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="sample" />
+        <variable
+            name="targetString"
+            type="String" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <variable
+            name="compareString"
+            type="String" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/backgraound"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="120dp"
+            android:background="@drawable/frame_style2"
+            android:gravity="center"
+            android:text="@{compareString}"
+            android:textSize="30sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="spread" />
+
+        <TextView
+            android:id="@+id/target_text"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_marginBottom="120dp"
+            android:background="@drawable/frame_style"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="@{targetString}"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:text="sample" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
