--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
     <item
-        android:id="@+id/delete_done"
-        android:title="チェック項目の消去"
-        app:showAsAction="never"/>
-
+        android:id="@+id/toolbar"
+        android:title="チェック項目の削除"
+        app:showAsAction="ifRoom" />
 </menu>
